--- a/public/views/templates/kt_dashboard_widget.html
+++ b/public/views/templates/kt_dashboard_widget.html
@@ -1,7 +1,9 @@
-<div id="header">
-
+<div id="content" layout-fill="" >
+    <!--diagramm-->
+    <!--oder -->
+    <!--text:-->
+    <!--todo text element erstellen-->
 </div>
-<div id="content">
 
-    <label>Test</label>
-</div>
+
+
