--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,5 +1,5 @@
 <div  layout-fill >
-    <md-toolbar layout="row" layout-align="center end" >
+    <md-toolbar md-scroll-shrink="false" layout="row" layout-align="center end" >
         <div flex="10" flex-sm="10" flex-md="15">
             <h3>OpServ</h3>
         </div>
@@ -56,35 +56,43 @@
             </md-toolbar>
             <div gridster="gridsterOpts">
                 <ul>
-                    <div md-whiteframe="20" gridster-item="item" ng-repeat="item in tab.items" id="{{item.id}}" class="my_grid_item">
-                        <md-button class="md-fab md-mini md-primary md-fab-top-right" ng-show="isEditMode" ng-click="deleteTabItem(tab,item)" >
-                            <md-icon class="material-icons" >delete forever</md-icon>
-                        </md-button>
-                    </div>
+                    <li em-height-source  md-whiteframe="20" gridster-item="item" ng-repeat="item in tab.items" >
+                        <div id="header">
+                            <md-button class="md-fab md-mini md-fab-top-right" ng-show="isEditMode" ng-click="deleteTabItem(tab,item)" >
+                                <md-icon class="material-icons" >delete forever</md-icon>
+                            </md-button>
+                        </div>
+                        <kt-dashboard-widget layout-fill="" em-height-target options="item.options"></kt-dashboard-widget>
+                    </li>
                 </ul>
             </div>
-
-            <md-fab-speed-dial md-open="isFabOpen" md-direction="up" class="md-scale ">
-                <md-fab-trigger>
-                    <md-button aria-label="menu" class="md-fab md-primary">
-                        <md-icon class="material-icons" >settings</md-icon>
-                    </md-button>
-                </md-fab-trigger>
-
-                <md-fab-actions >
-                    <md-button class="md-fab md-primary" ng-click="getChart()">
-                        <md-icon class="material-icons" >edit</md-icon>
-                    </md-button>
-                    <md-button class="md-fab md-primary" ng-click="deleteCurrentDashboard(tab)">
-                        <md-icon class="material-icons" >delete forever</md-icon>
-                    </md-button>
-                    <md-button class="md-fab md-primary" ng-click="addDashboard()">
-                        <md-icon class="material-icons" >add</md-icon>
-                    </md-button>
-                </md-fab-actions>
-            </md-fab-speed-dial>
         </md-tab>
     </md-tabs>
+
+    <md-fab-speed-dial md-open="isFabOpen" md-direction="up" class="md-scale ">
+        <md-fab-trigger>
+            <md-button aria-label="menu" class="md-fab">
+                <md-icon class="material-icons" >settings</md-icon>
+            </md-button>
+        </md-fab-trigger>
+
+        <md-fab-actions >
+            <md-button class="md-fab " ng-click="toggleEditMode()">
+                <md-icon class="material-icons" >edit</md-icon>
+            </md-button>
+            <md-button class="md-fab " ng-click="deleteCurrentDashboard(tab)">
+                <md-icon class="material-icons" >delete forever</md-icon>
+            </md-button>
+            <md-button class="md-fab " ng-click="addDashboard()">
+                <md-icon class="material-icons" >add</md-icon>
+            </md-button>
+        </md-fab-actions>
+    </md-fab-speed-dial>
+
+
+
+
+
 
     <!--<div id="one"></div>-->
     <!--<form ng-submit="addTab(tTitle,tContent)" layout="column" class="md-padding" style="padding-top: 0;">-->
