--- a/public/views/templates/kt_dashboard_widget.html
+++ b/public/views/templates/kt_dashboard_widget.html
@@ -1,9 +1,2 @@
-<div id="content" layout-fill="" >
-    <!--diagramm-->
-    <!--oder -->
-    <!--text:-->
-    <!--todo text element erstellen-->
-</div>
-
-
+<kt-cpu-live ng-if="display=='chart_cpu_live'" layout-fill="" options="options"> </kt-cpu-live>
 
