--- a/public/views/templates/kt_dashboard_widget.html
+++ b/public/views/templates/kt_dashboard_widget.html
@@ -1,2 +1,1 @@
-<kt-cpu-live ng-if="display=='chart_cpu_live'" layout-fill="" options="options"> </kt-cpu-live>
-
+<kt-cpu-live ng-if="display=='chart_cpu_live'" options="options" baseurl="baseurl" widgetindex="widgetindex" dashboardindex="dashboardindex"></kt-cpu-live>
