--- a/public/css/own.css
+++ b/public/css/own.css
@@ -82,6 +82,45 @@ md-divider{
     background-color: rgba(255,255,255,0.87);
 }
 
+md-select-menu md-content{
+    background-color: #242424;
+    color: rgba(255,255,255,0.87);
+}
+
+md-select-menu md-content md-option:hover{
+    background-color: #444444 !important;
+}
+
+md-select-menu md-content md-option:focus{
+    background-color: #444444 !important;
+}
+
+md-select-menu md-content md-option[selected]:focus {
+    color: #00b8d4;
+}
+
+md-input-container:not(.md-input-invalid).md-input-focused .md-input {
+    border-color: #00b8d4;
+}
+md-input-container:not(.md-input-invalid).md-input-focused label {
+    color: #00b8d4;
+}
+
+md-select:not([disabeled]):focus .md-select-value {
+    border-bottom-color: #00b8d4;
+    color: #00b8d4 !important;
+}
+
+md-input-container.md-input-focused:not(.md-input-has-value) md-select .md-select-value.md-select-placeholder {
+    color: #00b8d4 !important;
+    border-bottom-color: #00b8d4;
+}
+
+.md-select-value span div.md-text{
+    color: rgba(255,255,255,0.87) !important;
+}
+
+
 /*.md-fab md-icon:hover{*/
     /*color: #242424 !important;*/
 /*}*/
