--- a/public/views/templates/kt_dashboard_fab.html
+++ b/public/views/templates/kt_dashboard_fab.html
@@ -9,7 +9,7 @@
         <md-button class="md-fab md-mini" ng-click="toggleEditMode()">
             <md-icon class="material-icons" >edit</md-icon>
         </md-button>
-        <md-button class="md-fab md-mini" ng-click="deleteCurrentDashboard(tab)">
+        <md-button class="md-fab md-mini" ng-click="deleteCurrentDashboard(selectedDashboard)">
             <md-icon class="material-icons" >delete forever</md-icon>
         </md-button>
         <md-button class="md-fab md-mini" ng-click="addDashboard()">
