test for server

--- a/views/templates/toolbars/kt_dashboards_toolbar.html
+++ b/views/templates/toolbars/kt_dashboards_toolbar.html
@@ -34,14 +34,17 @@
         </div>
     <span flex=""></span>
         <span>
-
-                         <md-button style="margin-top: 5px" class="md-icon-button" ng-click="openOpservSettingsDialog()">
-                    <md-icon class="material-icons">settings</md-icon>
-             </md-button>
             <!--<md-menu  md-position-mode="target-right target" md-offset="-20 40">-->
-                <!--<md-button style="margin-top: 5px" class="md-icon-button" ng-click="openOpservSettingsDialog()">-->
-                    <!--<md-icon class="material-icons">settings</md-icon>-->
+                <!--<md-button style="margin-top: 5px" class="md-icon-button" ng-click="openOpservMenu()">-->
+                    <!--<md-icon class="material-icons">more_vert</md-icon>-->
                 <!--</md-button>-->
+                <!--<md-menu-content width="4">-->
+                    <!--<md-menu-item ng-repeat="option in menuOptions">-->
+                        <!--<md-button ng-click="option.action">-->
+                            <!--{{option.label}}-->
+                        <!--</md-button>-->
+                    <!--</md-menu-item>-->
+                <!--</md-menu-content>-->
             <!--</md-menu>-->
         </span>
 </md-toolbar>
