--- a/views/templates/toolbars/kt_login_toolbar.html
+++ b/views/templates/toolbars/kt_login_toolbar.html
@@ -1,3 +1,33 @@
+<md-toolbar md-scroll-shrink="false"  class="md-tall" hide-gt-xs="">
+    <div layout="row" >
+        <h3>{{ 'APP_HEADLINE' | translate }}</h3>
+        <span flex=""></span>
+        <span>
+            <md-menu  md-position-mode="target-right target" md-offset="-20 40">
+                <md-button style="margin-top: 5px" class="md-icon-button" ng-click="$mdOpenMenu()">
+                    <md-icon class="material-icons">more_vert</md-icon>
+                </md-button>
+                <md-menu-content width="3" class="blackground">
+                    <md-menu-item >
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
+        </span>
+    </div>
+</md-toolbar>
+<!--toolbar for large screens-->
 <md-toolbar md-scroll-shrink="false" layout="row"  hide-xs="">
-    <h3 >OpServ</h3>
+    <h3>{{ 'APP_HEADLINE' | translate }}</h3>
+    <span flex=""></span>
+    <span>
+            <md-menu  md-position-mode="target-right target" md-offset="-20 40">
+                <md-button style="margin-top: 5px" class="md-icon-button" ng-click="$mdOpenMenu()">
+                    <md-icon class="material-icons">more_vert</md-icon>
+                </md-button>
+                <md-menu-content width="3" class="blackground">
+                    <md-menu-item >
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
+        </span>
 </md-toolbar>
