--- a/views/templates/dialog/widget_settings_dialog.html
+++ b/views/templates/dialog/widget_settings_dialog.html
@@ -2,7 +2,7 @@
     <form ng-cloak>
         <md-toolbar>
             <div class="md-toolbar-tools">
-                <h2>Settings</h2>
+                <h2>{{ 'WIDGET_SETTINGS_TEXT' | translate }}</h2>
                 <span flex></span>
                 <md-button class="md-icon-button" ng-click="cancel()">
                     <md-icon>close</md-icon>
@@ -13,18 +13,18 @@
         <md-dialog-content class="blackground-light">
             <div class="md-dialog-content">
                 <md-input-container>
-                    <label>Title</label>
+                    <label>{{ 'TITLE_TEXT' | translate }}</label>
                     <input ng-model="title" >
                 </md-input-container>
                 <md-input-container class="md-block" flex-gt-sm>
-                    <label>Typ</label>
+                    <label>{{ 'TYPE_TEXT' | translate }}</label>
                     <md-select class="blackground-light" ng-model="currentMode" ng-model-options="{trackBy: '$value.text'}">
                         <md-option ng-repeat="mode in modes" ng-value="mode">
                             {{mode.text}}
                         </md-option>
                     </md-select>
                 </md-input-container>
-                <span>Abtastrate</span>
+                <span>{{ 'GATHERING_RATE_TEXT' | translate }}</span>
                 <md-slider-container>
                     <md-slider flex min="500" max="10000" ng-model="samplingRateLive" aria-label="sampling-rate" id="sampling-rate-slider">
                     </md-slider>
@@ -38,10 +38,10 @@
         <md-dialog-actions layout="row" class="blackground">
             <span flex></span>
             <md-button class="md-raised md-warn" ng-click="cancel()">
-                Abbrechen
+                {{ 'CANCEL_TEXT' | translate }}
             </md-button>
             <md-button class="md-raised md-accent" ng-click="submit()">
-                Speichern
+                {{ 'SAVE_TEXT' | translate }}
             </md-button>
         </md-dialog-actions>
     </form>
