--- a/views/templates/kt_dashboard_fab.html
+++ b/views/templates/kt_dashboard_fab.html
@@ -1,7 +1,7 @@
 <md-fab-speed-dial md-open="isFabOpen" md-direction="up" class="md-scale md-fab-bottom-right ">
     <md-fab-trigger>
         <md-button aria-label="menu" class="md-fab ">
-            <md-icon class="material-icons" >settings</md-icon>
+            <md-icon class="material-icons" >build</md-icon>
         </md-button>
     </md-fab-trigger>
 
