--- a/views/templates/toolbars/kt_dashboards_toolbar.html
+++ b/views/templates/toolbars/kt_dashboards_toolbar.html
@@ -11,7 +11,7 @@
                 <md-menu-content width="3" class="blackground">
                     <md-menu-item >
                         <md-button ng-click="openSettingsOpservDialog()">
-                            {{ 'OPSERV_SETTINGS_TEXT' | translate }}
+                            {{ 'GATHERING_SETTINGS_TEXT' | translate }}
                         </md-button>
                     </md-menu-item>
                     <md-menu-item >
@@ -51,7 +51,7 @@
                 <md-menu-content width="3" class="blackground">
                     <md-menu-item >
                         <md-button ng-click="openSettingsOpservDialog()">
-                            {{ 'OPSERV_SETTINGS_TEXT' | translate }}
+                            {{ 'GATHERING_SETTINGS_TEXT' | translate }}
                         </md-button>
                     </md-menu-item>
                     <md-menu-item >
