--- a/views/templates/dialog/widget_settings_dialog.html
+++ b/views/templates/dialog/widget_settings_dialog.html
@@ -1,5 +1,5 @@
 <md-dialog class="blackground" flex="66">
-    <form ng-cloak>
+    <form ng-cloak ng-submit="submit()">
         <md-toolbar>
             <div class="md-toolbar-tools">
                 <h2>{{ 'WIDGET_SETTINGS_TEXT' | translate }}</h2>
@@ -24,12 +24,12 @@
                         </md-option>
                     </md-select>
                 </md-input-container>
-                <span>{{ 'GATHERING_RATE_TEXT' | translate }}</span>
-                <md-slider-container>
-                    <md-slider flex min="500" max="10000" ng-model="samplingRateLive" aria-label="sampling-rate" id="sampling-rate-slider">
+                <span ng-if="currentMode.text =='Live'">{{ 'GATHERING_RATE_TEXT' | translate }}</span>
+                <md-slider-container ng-if="currentMode.text =='Live'">
+                    <md-slider flex min="500" max="10000" ng-model="samplingRate" aria-label="sampling-rate" id="sampling-rate-slider">
                     </md-slider>
                     <md-input-container>
-                        <input flex type="number" ng-model="samplingRateLive" aria-label="sampling-rate" aria-controls="sampling-rate-slider">
+                        <input flex type="number" min="500" max="10000" ng-model="samplingRate" aria-label="sampling-rate" aria-controls="sampling-rate-slider">
                     </md-input-container>
                 </md-slider-container>
             </div>
@@ -40,7 +40,7 @@
             <md-button class="md-raised md-warn" ng-click="cancel()">
                 {{ 'CANCEL_TEXT' | translate }}
             </md-button>
-            <md-button class="md-raised md-accent" ng-click="submit()">
+            <md-button ng-disabled="saveDisabeled" class="md-raised md-accent" type="submit">
                 {{ 'SAVE_TEXT' | translate }}
             </md-button>
         </md-dialog-actions>
